<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="action_settings">Settings</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="error.message.fill_out_information">Please fill out all data.</string>
    <string name="error.message.email_taken">This email is already taken.</string>
    <string name="error.message.network">Network error occurred, Please try again.</string>
    <string name="error.message.incorrect_id_or_password">Incorrect email or password.</string>
    <string name="error.message.email_invalid">Invalid email.</string>
    <string name="error.message.confirm_password">Confirmed password must equals to password.</string>
    <string name="error.message.login">Cannot logged in, Please try again.</string>
    <string name="error.message.internet_connection">Cannot proceed, Please check your internet connection.</string>
    <string name="error.message.already_friend">
        You are already friend with <xliff:g id="friendName">%s</xliff:g>.
    </string>
    <string name="login">Log in</string>
    <string name="logging_in_with_google">Logging in with Google</string>
    <string name="login_with_google">Log in with Google</string>
    <string name="logging_out_with_google">Logging out with Google</string>
    <string name="logging_in_with_facebook">Logging in with Facebook</string>
    <string name="login_with_facebook">Log in with Facebook</string>
    <string name="logging_out_with_facebook">Logging out with Facebook</string>
    <string name="logging_in_with_twitter">Logging in with Twitter</string>
    <string name="login_with_twitter">Log in with Twitter</string>
    <string name="logging_out_with_twitter">Logging out with Twitter</string>
    <string name="logging_in_with_email">Logging in with Email</string>
    <string name="login_with_email">Log in with Email</string>
    <string name="logging_out_with_email">Logging out with Email</string>
    <string name="authenticating_user">Authenticating user</string>
    <string name="register">Register</string>
    <string name="registration">Registration</string>
    <string name="or">Or</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="settings.logout">Logout</string>
    <string name="create_account">Create account</string>
    <string name="add_friend">Add friend</string>
    <string name="success.message.you_are_now_friend">
        You and <xliff:g id="friendName">%s</xliff:g> are now friend!!
    </string>
    <string name="new_friend">New friend</string>
    <string name="notification.message.you_are_added_as_friend">
        <xliff:g id="friendName">%s</xliff:g> added you as a friend!!
    </string>
    <string name="dialog.message.add_friend">
        Add <xliff:g id="friendName">%s</xliff:g> as a friend?
    </string>
    <string name="latest_message_by">
        You: <xliff:g id="message">%s</xliff:g>
    </string>
    <string name="friend_typing">
        <xliff:g id="friend">%s</xliff:g> is typing…
    </string>
    <string name="chat">Chat</string>
    <string name="hint.message.enter_text_here">Enter text here…</string>
    <string name="loading_messages">Loading messages…</string>
    <string-array name="contact_spinner">
        <item>Friends</item>
        <item>Group</item>
        <item>Public</item>
    </string-array>
    <string name="new_messages">New messages</string>
    <string name="send_photo">Send a photo</string>
    <string name="info">Info</string>
    <string name="people">People</string>
    <string name="group_members">Group Members</string>
    <string name="creating_room">Creating room</string>
    <string name="find_friends">Find friends</string>
    <string name="search">Search</string>
    <string name="attachment">Attachment</string>
    <string name="camera">Camera</string>
    <string name="Gallery">Gallery</string>
    <string name="close">Close</string>
    <string name="room_created">Room created</string>
    <string name="no_message">No message</string>
    <string name="new_public_chat">New public chat</string>
    <string name="room_name">Room name</string>
    <string name="hint.optional_description_for_your_room">Optional description for your room</string>
    <string name="type_colon">Type:</string>
    <string name="error.room_name_empty">Name is empty</string>
    <string name="error.room_name_exceeds_limit">Name exceeds character limit</string>
    <string name="error.room_description_empty">Description is empty</string>
    <string name="error.room_description_exceeds_limit">Description exceeds character limit</string>
    <string name="open_with_camera">Open with camera</string>
    <string name="open_with_gallery">Open with gallery</string>
    <string name="error.creating_room">Error occurred, while creating room, please try again.</string>
    <string name="admin">Admin</string>
    <string name="find_public_chat">Find public chat</string>
    <string name="profile">Profile</string>
    <string name="general">General</string>
    <string name="user">User</string>
    <string name="filter_list">Filter List</string>
    <string name="public_chat_type">Public chat types</string>
    <string name="all">All</string>
    <string name="error.no_result_for">
        No result for: "<xliff:g name="result">%s</xliff:g>"
    </string>
    <string name="error.you.have.to.join.to.chat">You have to join to chat.</string>
    <string name="join_this_chat">Join this chat</string>
    <string name="error.cannot_join_chat">Cannot join chat, please try again.</string>
    <string name="join_room_success">Join room success.</string>
    <string name="invite_friends">Invite friends</string>
    <string name="error.select_at_least_two_to_make_a_group">Please select at least 2 people to make this a group.</string>
    <string name="error.select_at_least_one_person">Please select at least 1 person.</string>
    <string name="add_members">Add members</string>
    <string name="members">Members</string>
    <string name="add_admin">Add admin</string>
    <string name="error.select_friend_only_n_amount">
        You can only select friend up to <xliff:g id="max">%d</xliff:g>
    </string>
    <string name="n_promoted_n_to_be_admin">
        <xliff:g id="person">%s</xliff:g> promoted <xliff:g id="all_friends">%s</xliff:g> to be admin.
    </string>
    <string name="n_demoted_n_from_admin_to_member">
        <xliff:g id="person">%s</xliff:g> demoted <xliff:g id="all_friends">%s</xliff:g> from admin to be member.
    </string>
    <string name="n_invited_n_to_room">
        <xliff:g id="person">%s</xliff:g> invited <xliff:g id="all_friends">%s</xliff:g> to chat.
    </string>
    <string name="n_removed_n_from_room">
        <xliff:g id="person">%s</xliff:g> removed <xliff:g id="all_friends">%s</xliff:g> from chat.
    </string>
    <string name="remove_member">Remove member</string>
    <string name="demote_admin">Demote admin</string>
    <string name="error_no_friend_to_be_invited">No friend to be invited.</string>
    <string name="leave_room">Leave room</string>
    <string name="error.no_addable_admin">Every member is an admin.</string>
    <string name="find_admin">Find admins</string>
    <string name="error_no_admin_to_be_demoted">No admin to be demoted.</string>
    <string name="error.no_member_to_be_removed">No member to be removed.</string>
    <string name="edit">Edit</string>
    <string name="leave_chat_message">You will no longer receive any messages, If you leave this chat.</string>
    <string name="leave_chat">Leave chat</string>
    <string name="error.leaving_chat">Error occurred, while leaving chat. Please try again</string>
    <string name="you_got_removed_from_this_chat">You get removed from this chat, You cannot talk in this chat anymore.</string>
    <string name="are_you_sure_to_logout">Are you sure to logout?</string>
    <string name="no_friend_to_be_added">No friend to be added.</string>
    <string name="no_public_chat">No public chat</string>
    <string name="successfullly_leave_n">
        You successfully leave <xliff:g id="name">%s</xliff:g>.
    </string>
    <string name="you">You</string>
    <string name="n_admin_leave_chat_n_is_now_admin">
        Admin <xliff:g id="leaveName">%s</xliff:g> leaved this chat, <xliff:g id="newAdminName">%s</xliff:g> get promoted to be admin.
    </string>
    <string name="n_leave_chat_n_is_now_admin">
        <xliff:g id="leaveName">%s</xliff:g> leaved this chat, <xliff:g id="newAdminName">%s</xliff:g> get promoted to be admin.
    </string>
    <string name="n_leave_this_chat">%s leave this chat.</string>
    <string name="change_profile_image">Change image</string>
    <string name="edit_name">Edit name</string>
    <string name="display_name">Display name</string>
    <string name="change">Change</string>
    <string name="add">Add</string>
    <string name="success_friend_requested_sent">Friend requested sent.</string>
    <string name="error.friend_requested_sent">Friend requested failed to send, Please try again</string>
    <string name="friend_request">Friend request</string>
    <string name="send_friend_request_to_n">Send friend request to %s ?</string>
    <string name="send">Send</string>
    <string name="about">About</string>
    <string name="friends">Friends</string>
    <string name="your_requests">Your request</string>
    <string name="request_received">Request received</string>
    <string name="you_are_not_send_any_friend_request">You didn\'t send any friend requests.</string>
    <string name="your_friend_requests">Your friend requests</string>
    <string name="accept_friend">Accept friend</string>
    <string name="accept_n_as_friend">Accept %s as a friend?</string>
    <string name="accept">Accept</string>
    <string name="you_accept_n_as_friend">You accept %s as a friend!!</string>
    <string name="error.accept_friend">Error occurred, while accepting %s as a friend. Please try again.</string>
    <string name="error.no_new_requests">No new requests.</string>
    <string name="error.n_remove_request_cannot_accept_friend">Cannot accept friend request, Because %s removed friend request.</string>
    <string name="n_send_you_a_friend_request">%s send you a friend request.</string>
    <string name="reject">Reject</string>
    <string name="you_need_to_login_in_order_to_n">Cannot %s, You need to manually do it in app.</string>
    <string name="remove_request">Remove request</string>
    <string name="remove">Remove</string>
    <string name="are_you_sure_to_remove_friend_request_for_n">Are you sure to remove your friend request for %s ?</string>
    <string name="cannot_remove_requst_try_again">Cannot remove request, Please try again.</string>
    <string name="search_result">Search result</string>
    <string name="result_n">Result: %s</string>
    <string name="n_accepted_you_as_friend">%s accepted you as a friend!!</string>
    <string name="accept_friend_request">Accept friend request</string>
    <string name="not_member_of_this_chat">You are not member of this chat</string>
    <string name="enabled">Enabled</string>
    <string name="disabled">Disabled</string>
    <string name="ringtone">Ringtone</string>
    <string name="vibrate">Vibrate</string>
    <string name="n_sent_friend_request_go_check_received_requests_tab">%s already sent friend request to you, Go check received requests tab.</string>
    <string name="language">Language</string>
    <string name="error._cannot_register_try_again">Cannot register, Please try again.</string>
    <string name="you_dont_have_messages">You don\'t have any messages.</string>
    <string name="you_dont_have_any_friends">You don\'t have any friends</string>
    <string name="you_dont_have_groups">You don\'t have any groups.</string>
</resources>