<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Your FAB implementation -->
    <com.oakkub.chat.views.widgets.SheetFab
        android:id="@+id/fab"
        style="@style/FabStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        android:src="@drawable/ic_mode_edit_white_24dp" />

    <!-- Overlay that dims the screen -->
    <com.gordonwong.materialsheetfab.DimOverlayFrameLayout
        android:id="@+id/overlay_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <!-- Circular reveal container for the sheet -->
    <io.codetail.widget.RevealLinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="end|bottom"
        android:orientation="vertical">

        <!-- Sheet that contains your items -->
        <android.support.v7.widget.CardView
            android:id="@+id/fab_sheet"
            android:layout_width="@dimen/sheet_width"
            android:layout_height="wrap_content">

            <!-- Sheet items -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/fab_sheet_item_find_public_chat"
                    style="@style/SheetItemStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_search_red_24dp"
                    android:drawableStart="@drawable/ic_search_red_24dp"
                    android:text="@string/find_public_chat" />

                <TextView
                    android:id="@+id/fab_sheet_item_public_chat"
                    style="@style/SheetItemStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_public_red_24dp"
                    android:drawableStart="@drawable/ic_public_red_24dp"
                    android:text="@string/new_public_chat" />

                <TextView
                    android:id="@+id/fab_sheet_item_add_friend"
                    style="@style/SheetItemStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_person_add_24dp"
                    android:drawableStart="@drawable/ic_person_add_24dp"
                    android:text="@string/add_friend" />

                <TextView
                    android:id="@+id/fab_sheet_item_new_messages"
                    style="@style/SheetItemStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorAccent"
                    android:drawableLeft="@drawable/ic_mode_edit_white_24dp"
                    android:drawableStart="@drawable/ic_mode_edit_white_24dp"
                    android:gravity="center_vertical"
                    android:text="@string/new_messages"
                    android:textColor="@android:color/white" />

            </LinearLayout>

        </android.support.v7.widget.CardView>

    </io.codetail.widget.RevealLinearLayout>

</FrameLayout>