<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fresco="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <include layout="@layout/partial_toolbar" />

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:divider="@drawable/spacer_large"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:showDividers="beginning|middle|end">

            <com.facebook.drawee.view.SimpleDraweeView
                android:id="@+id/group_info_profile_image"
                android:layout_width="@dimen/spacing_large"
                android:layout_height="@dimen/spacing_large"
                fresco:roundAsCircle="true" />

            <TextView
                android:id="@+id/group_info_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:maxLines="1"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                android:textColor="@android:color/black" />

            <include layout="@layout/partial_horizontal_line" />

            <Button
                android:id="@+id/room_info_edit_button"
                style="@style/FullWidthButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/edit" />

            <Button
                android:id="@+id/room_info_member_button"
                style="@style/FullWidthButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/members" />

            <Button
                android:id="@+id/room_info_admin_button"
                style="@style/FullWidthButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/admin" />

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

    <include layout="@layout/progress_bar" />

</android.support.design.widget.CoordinatorLayout>