<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:id="@+id/email_login_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:divider="@drawable/spacer_medium"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/spacing_smaller"
            android:showDividers="beginning|middle|end">

            <TextView
                android:id="@+id/email_login_header_textview"
                style="@style/TextViewHeaderStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/spacing_medium"
                android:layout_marginTop="@dimen/spacing_small"
                android:text="@string/login_with_email" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/email_textinputlayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/spacing_small"
                android:background="@drawable/rounded_square_background">

                <EditText
                    android:id="@+id/email_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint.message.email_example"
                    android:inputType="textEmailAddress" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/password_textinputlayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/spacing_small"
                android:background="@drawable/rounded_square_background">

                <EditText
                    android:id="@+id/password_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint.message.password"
                    android:inputType="textPassword" />

            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/spacing_small"
                android:divider="@drawable/spacer_medium"
                android:orientation="horizontal"
                android:showDividers="beginning|middle|end">

                <Button
                    android:id="@+id/email_register_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded_square_transparent_button"
                    android:text="@string/register"
                    tools:ignore="ButtonStyle" />

                <Button
                    android:id="@+id/email_login_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded_square_transparent_button"
                    android:text="@string/login"
                    tools:ignore="ButtonStyle" />

            </LinearLayout>

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</LinearLayout>

